--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>button ripple effect</title>
+    <title>BUTTON</title>
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" href="Elegantthemes-Beautiful-Flat-Paintbrush.512.png">
   </head>
   <body>
     <button id="btn1">CLICK</button>
